# binstream

./: CMakeLists.txt  README.md
include/: binstream_custom.h
include/binstream/: binstream.h
src/: binstream_bench.cpp  binstream_test.cpp
